--- a/HomeHaven/templates/admin/manage_order.html
+++ b/HomeHaven/templates/admin/manage_order.html
@@ -27,7 +27,7 @@
 
               <tr>
                 <th scope="row">{{forloop.counter}}</th>
-                <td>{{i.address.firstname}}</td>
+                <td>{{i.user.first_name}}</td>
                 <td>₹{{i.order_total}}</td>
                 <td>{{i.payment.payment_method}}</td>
                 <td>{{i.order_number}}</td>
