--- a/HomeHaven/templates/admin/admin_dash.html
+++ b/HomeHaven/templates/admin/admin_dash.html
@@ -198,8 +198,24 @@
     <div class="col-lg-3 p-2">
         <div class="card shadow bg-dark">
             <div class="card-body">
-                <h4 class="text-light">Total Revenue</h4>
+                <h4 class="text-light">Revenue Expected</h4>
                 <h5 style="color : #F1948A">{{total_income}}</h5>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3 p-2">
+        <div class="card shadow bg-dark">
+            <div class="card-body">
+                <h4 class="text-light">Total COD orders</h4>
+                <h5 style="color : #F1948A">{{cod_sum}}</h5>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3 p-2">
+        <div class="card shadow bg-dark">
+            <div class="card-body">
+                <h4 class="text-light">Total Razorpay Orders</h4>
+                <h5 style="color : #F1948A">{{razorpay_sum}}</h5>
             </div>
         </div>
     </div>
